# RenderLaz

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  build-run.ps1  build-run.sh  bulid-run.ps1
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/config/: ProjectConfig.cpp  ProjectConfig.h
src/effect/: EffectChain.cpp  EffectChain.h  EffectPass.cpp  EffectPass.h  NormalEffect.cpp  NormalEffect.h  RenderEffect.cpp  RenderEffect.h
src/logger/: Logger.cpp  Logger.h
src/render/: BlurFragment.glsl  RenderEngine.cpp  RenderEngine.h
src/render/shaders/: blur.frag  fullscreen.vert
src/resource/: ResourceManager.cpp  ResourceManager.h
src/task/: TaskManager.cpp  TaskManager.h
